<resources>
    <string name="app_name" translatable="false">MyBarCode</string>
    <string name="welcome_message">Welcome User</string>
    <string name="create_code_button">Create code</string>
    <string name="read_code_button">Scan code</string>
    <string name="create_qr_code_button">Create QR-code</string>
    <string name="create_bar_code_button">Create barcode</string>
    <string name="exporting_codes_button">Saved codes</string>
    <string name="type_in_request_text_view">Please type in some data.</string>
    <string name="scan_new_code_button">Scan code</string>
    <string name="return_button">Return</string>
    <string name="tell_information_text_view">Result</string>
    <string name="share_button">Share</string>
    <string name="export_button">Save</string>
    <string name="bad_input_textview">Your input is to short</string>
    <string name="save_location_local">Save local</string>
    <string name="save_successfully">Saved successfully.</string>
    <string name="save_unsuccessfully">Failed to save.</string>
    <string name="quit">Quit</string>
    <string name="select_save_option">Select save option.</string>
    <string name="local_location">Locale Data</string>
    <string name="image_not_found">Image not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_with">Share with</string>
    <string name="share_via">Share via</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="secure_delete_command">Should the element really be deleted?</string>
    <string name="volume_up_to_flash_on">Volume up to flash on.</string>
    <string name="save_scanned_code">Save Code</string>
    <string name="share_scanned_code">Share scanned Code</string>
    <string name="share_as_QR">Share as QR-code</string>
    <string name="share_as_bar">Share as bar-code</string>
</resources>