<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCodeActivity">

    <TextView
        android:id="@+id/requestInputTextView"
        android:layout_width="381dp"
        android:layout_height="83dp"
        android:autoSizeTextType="uniform"
        android:text="@string/type_in_request_text_view"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/returnFromCreateButton"
        android:layout_width="175dp"
        android:layout_height="65dp"
        android:autoSizeTextType="uniform"
        android:text="@string/return_button"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

    <Button
        android:id="@+id/createBarCodeButton"
        android:layout_width="175dp"
        android:layout_height="65dp"
        android:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="2sp"
        android:text="@string/create_bar_code_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/createQRCodeButton"
        android:layout_width="175dp"
        android:layout_height="65dp"
        android:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="2sp"
        android:text="@string/create_qr_code_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <EditText
        android:id="@+id/toCodeEditText"
        android:layout_width="299dp"
        android:layout_height="69dp"
        android:autoSizeTextType="uniform"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_in_request_text_view"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/badInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

</androidx.constraintlayout.widget.ConstraintLayout>