<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ScanCodeActivity">


    <Button
        android:id="@+id/scanNewCodeButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="2sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="156dp"
        android:text="@string/scan_new_code_button" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="2sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="27dp"
        android:text="@string/return_button" />

    <TextView
        android:id="@+id/scannedResultTextView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textIsSelectable="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="515dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text=""
        app:autoSizeStepGranularity="2sp" />

    <TextView
        android:id="@+id/showPositionOfResultTextView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="2sp"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="572dp"
        android:text="@string/tell_information_text_view" />

</RelativeLayout>